#ADD_EXECUTABLE (begin_end 10_begin_end.cpp)
ADD_EXECUTABLE (begin_end2 10_begin_end2.cpp)
ADD_EXECUTABLE (begin_end3 10_begin_end3.cpp)
ADD_EXECUTABLE (begin_end4 10_begin_end4.cpp)
ADD_EXECUTABLE (begin_end5 10_begin_end5.cpp)
ADD_EXECUTABLE (variadic_template 11_가변인자템플릿.cpp)
ADD_EXECUTABLE (variadic_template2 11_가변인자템플릿2.cpp)
#ADD_EXECUTABLE (variadic_template3 11_가변인자템플릿3.cpp)
ADD_EXECUTABLE (variadic_template4 11_가변인자템플릿4.cpp)
ADD_EXECUTABLE (tuple 12_tuple.cpp)
ADD_EXECUTABLE (tuple2 12_tuple2.cpp)
ADD_EXECUTABLE (tuple3 12_tuple3.cpp)
ADD_EXECUTABLE (tuple4 12_tuple4.cpp)
ADD_EXECUTABLE (tuple5 12_tuple5.cpp)
ADD_EXECUTABLE (tuple6 12_tuple6.cpp)
#ADD_EXECUTABLE (nullptr 2_nullptr.cpp)
#ADD_EXECUTABLE (nullptr2 2_nullptr2.cpp)
#ADD_EXECUTABLE (nullptr3 2_nullptr3.cpp)
#ADD_EXECUTABLE (nullptr4 2_nullptr4.cpp)
ADD_EXECUTABLE (nullptr5 2_nullptr5.cpp)
ADD_EXECUTABLE (nullptr6 2_nullptr6.cpp)
ADD_EXECUTABLE (uniform_initialize 3_uniform_initialize.cpp)
ADD_EXECUTABLE (initializer_list 4_initializer_list.cpp)
ADD_EXECUTABLE (initializer_list2 4_initializer_list2.cpp)
ADD_EXECUTABLE (typename 5_typename.cpp)
ADD_EXECUTABLE (lazy_instantiation 6_지연된인스턴스화.cpp)
ADD_EXECUTABLE (template_specialization 7_템플릿부분전문화.cpp)
#ADD_EXECUTABLE (traits 8_traits.cpp)
ADD_EXECUTABLE (traits2 8_traits2.cpp)
#ADD_EXECUTABLE (traits3 8_traits3.cpp)
#ADD_EXECUTABLE (traits4 8_traits4.cpp)
ADD_EXECUTABLE (traits5 8_traits5.cpp)
ADD_EXECUTABLE (traits6 8_traits6.cpp)
ADD_EXECUTABLE (traits7 8_traits7.cpp)
#ADD_EXECUTABLE (static_assert 9_static_assert.cpp)
ADD_EXECUTABLE (static_assert2 9_static_assert2.cpp)
#ADD_EXECUTABLE (static_assert3 9_static_assert3.cpp)
